# Mentormindapp

./: .env.example  .gitignore  .replit  DEPLOY.md  app.py  database.py  mentormind.db-shm  mentormind.db-wal  pyproject.toml  replit.md  requirements.txt  test_sqlitecloud.py  vercel.json
api/: index.py
attached_assets/: Pasted--Dec-01-14-41-17-83-GET-mentormindapp-3kounbx4j-paulo-davis-projects-vercel-app-favicon-pn-1764610933699_1764610933703.txt  Pasted-Dec-01-14-56-55-41-GET-500-mentormindapp-vercel-app-Error-importing-api-index-py-Traceback--1764611862910_1764611862911.txt  Pasted-Quero-que-voc-crie-o-design-completo-a-estrutura-funcional-o-fluxo-de-telas-e-a-l-gica-do-aplica-1764371741390_1764371741392.txt  Pasted-TypeError-TypeError-Row-argument-1-must-be-sqlite3-Cursor-not-Cursor-Traceback-most-recent--1764609419188_1764609419189.txt  videoplayback (1)_1764379841930.weba
static/css/: style.css
static/js/: app.js
templates/: base.html  dashboard.html  flashcards.html  focus.html  gamification.html  landing.html  library.html  login.html  mentor.html  profile.html  quiz.html  register.html  study_plan.html  summary.html  tutor.html  weak_points.html
