[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "openai>=2.8.1",
    "pillow>=12.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "werkzeug>=3.1.3",
    "sqlitecloud>=0.0.9",
]
